@@ -1,3 +1,4 @@
+* Add context to export URL
 * Allow changes to editable tree checkboxes without first selecting the line
 
 Version 5.6.0 - 2020-05-04
